better style now. added template to put custom routes below the models. added condition to only load the css and the sidebar if "has_permission".

--- a/adminoverrides/static/adminoverrides/css/sidebar.css
+++ b/adminoverrides/static/adminoverrides/css/sidebar.css
@@ -1,25 +1,59 @@
-#content {
+html, body, #container {
+    height: 100%;
+}
+
+body {
+    background: #417690;
+}
+
+#contentwrapper {
     float: left;
+    width: 100%;
+    height: 100%;
+}
+
+#contentwrapper > .inner {
+    min-height: 100%;
     margin-left: 250px;
+    background: #fff;
+}
+
+.dashboard #content {
+    width: auto;
 }
 
 #left_sidebar {
     float: left;
     height: 100%;
-    background: #f8f8f8;
+    background: #417690;
     position: absolute;
     width: 250px;
 }
 
-.app > ul {
-	display: none;
-}
-.app.active > ul {
-	display: block;
+#left_sidebar .available_apps {
+    padding: 20px 10px;
 }
 
-.model {
-}
-.model.active {
+#left_sidebar li {
+    list-style-type: none;
 }
 
+#left_sidebar a {
+    color: #fff;
+    font-weight: bold;
+    display: block;
+    padding: 0 5px;
+}
+
+#left_sidebar .app > ul {
+    display: none;
+    padding: 0 20px;
+}
+
+#left_sidebar .app.active > ul {
+    display: block;
+}
+
+#left_sidebar a:hover {
+    background: #79aec8;
+}
