--- a/adminoverrides/templates/admin/base.html
+++ b/adminoverrides/templates/admin/base.html
@@ -4,7 +4,7 @@
 <head>
 <title>{% block title %}{% endblock %}</title>
 <link rel="stylesheet" type="text/css" href="{% block stylesheet %}{% static "admin/css/base.css" %}{% endblock %}" />
-    {% if has_permission %}
+    {% if has_permission and not is_popup %}
         <link rel="stylesheet" type="text/css" href="{% static "adminoverrides/css/sidebar.css" %}" />
     {% endif %}
 {% block extrastyle %}{% endblock %}
@@ -89,7 +89,7 @@
     </div>
 </div>
 
-{% if has_permission %}
+{% if has_permission and not is_popup %}
     {% block left_sidebar %}{% include "admin/includes/left_sidebar.html" %}{% endblock %}
 {% endif %}
 
