--- a/adminoverrides/static/adminoverrides/css/sidebar.css
+++ b/adminoverrides/static/adminoverrides/css/sidebar.css
@@ -1,59 +1,77 @@
 html, body, #container {
-    height: 100%;
+	height: 100%;
 }
 
 body {
-    background: #417690;
+	background: #417690;
 }
 
 #contentwrapper {
-    float: left;
-    width: 100%;
-    height: 100%;
+	float: left;
+	width: 100%;
+	height: 100%;
 }
 
 #contentwrapper > .inner {
-    min-height: 100%;
-    margin-left: 250px;
-    background: #fff;
+	min-height: 100%;
+	margin-left: 250px;
+	/* background: #fff; */
 }
 
 .dashboard #content {
-    width: auto;
+	width: auto;
+}
+
+div.breadcrumbs {
+	background: none;
+	color: #333;
+	padding: 0 0 25px 0;
+}
+
+div.breadcrumbs a {
+	color: #333;
+}
+
+#content {
+	border-radius: 7px;
+	overflow: hidden;
+	background: #fff;
+	margin-right: 10px;
+	margin-bottom: 20px;
 }
 
 #left_sidebar {
-    float: left;
-    height: 100%;
-    background: #417690;
-    position: absolute;
-    width: 250px;
+	float: left;
+	height: 100%;
+	background: #417690;
+	position: absolute;
+	width: 250px;
 }
 
 #left_sidebar .available_apps {
-    padding: 20px 10px;
+	padding: 20px 10px;
 }
 
 #left_sidebar li {
-    list-style-type: none;
+	list-style-type: none;
 }
 
 #left_sidebar a {
-    color: #fff;
-    font-weight: bold;
-    display: block;
-    padding: 0 5px;
+	color: #fff;
+	font-weight: bold;
+	display: block;
+	padding: 0 5px;
 }
 
 #left_sidebar .app > ul {
-    display: none;
-    padding: 0 20px;
+	display: none;
+	padding: 0 20px;
 }
 
 #left_sidebar .app.active > ul {
-    display: block;
+	display: block;
 }
 
 #left_sidebar a:hover {
-    background: #79aec8;
+	background: #79aec8;
 }
