--- a/adminoverrides/templates/admin/base.html
+++ b/adminoverrides/templates/admin/base.html
@@ -4,9 +4,10 @@
 <head>
 <title>{% block title %}{% endblock %}</title>
 <link rel="stylesheet" type="text/css" href="{% block stylesheet %}{% static "admin/css/base.css" %}{% endblock %}" />
-    {% if has_permission and not is_popup %}
-        <link rel="stylesheet" type="text/css" href="{% static "adminoverrides/css/sidebar.css" %}" />
-    {% endif %}
+	{% if has_permission and not is_popup %}
+		<link rel="stylesheet" type="text/css" href="{% static "adminoverrides/css/sidebar.css" %}" />
+	{% endif %}
+	<link rel="stylesheet" type="text/css" href="{% static "adminoverrides/css/tinymce.css" %}" />
 {% block extrastyle %}{% endblock %}
 {% if LANGUAGE_BIDI %}<link rel="stylesheet" type="text/css" href="{% block stylesheet_rtl %}{% static "admin/css/rtl.css" %}{% endblock %}" />{% endif %}
 {% block extrahead %}{% endblock %}
@@ -20,81 +21,85 @@
 <!-- Container -->
 <div id="container">
 
-    {% if not is_popup %}
-    <!-- Header -->
-    <div id="header">
-        <div id="branding">
-        {% block branding %}{% endblock %}
-        </div>
-        {% block usertools %}
-        {% if has_permission %}
-        <div id="user-tools">
-            {% block welcome-msg %}
-                {% trans 'Welcome,' %}
-                <strong>{% firstof user.get_short_name user.get_username %}</strong>.
-            {% endblock %}
-            {% block userlinks %}
-                {% if site_url %}
-                    <a href="{{ site_url }}">{% trans 'View site' %}</a> /
-                {% endif %}
-                {% if user.is_active and user.is_staff %}
-                    {% url 'django-admindocs-docroot' as docsroot %}
-                    {% if docsroot %}
-                        <a href="{{ docsroot }}">{% trans 'Documentation' %}</a> /
-                    {% endif %}
-                {% endif %}
-                {% if user.has_usable_password %}
-                <a href="{% url 'admin:password_change' %}">{% trans 'Change password' %}</a> /
-                {% endif %}
-                <a href="{% url 'admin:logout' %}">{% trans 'Log out' %}</a>
-            {% endblock %}
-        </div>
-        {% endif %}
-        {% endblock %}
-        {% block nav-global %}{% endblock %}
-    </div>
-    <!-- END Header -->
-    {% endif %}
+	{% if not is_popup %}
+	<!-- Header -->
+	<div id="header">
+		<div id="branding">
+		{% block branding %}{% endblock %}
+		</div>
+		{% block usertools %}
+		{% if has_permission %}
+		<div id="user-tools">
+			{% block welcome-msg %}
+				{% trans 'Welcome,' %}
+				<strong>{% firstof user.get_short_name user.get_username %}</strong>.
+			{% endblock %}
+			{% block userlinks %}
+				{% if site_url %}
+					<a href="{{ site_url }}">{% trans 'View site' %}</a> /
+				{% endif %}
+				{% if user.is_active and user.is_staff %}
+					{% url 'django-admindocs-docroot' as docsroot %}
+					{% if docsroot %}
+						<a href="{{ docsroot }}">{% trans 'Documentation' %}</a> /
+					{% endif %}
+				{% endif %}
+				{% if user.has_usable_password %}
+				<a href="{% url 'admin:password_change' %}">{% trans 'Change password' %}</a> /
+				{% endif %}
+				<a href="{% url 'admin:logout' %}">{% trans 'Log out' %}</a>
+			{% endblock %}
+		</div>
+		{% endif %}
+		{% endblock %}
+		{% block nav-global %}{% endblock %}
+	</div>
+	<!-- END Header -->
+	{% endif %}
 
 <div id="contentwrapper">
-    <div class="inner">
-        {% if not is_popup %}
-        {% block breadcrumbs %}
-        <div class="breadcrumbs">
-        <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-        {% if title %} &rsaquo; {{ title }}{% endif %}
-        </div>
-        {% endblock %}
-        {% endif %}
-        {% block messages %}
-            {% if messages %}
-            <ul class="messagelist">{% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message|capfirst }}</li>
-            {% endfor %}</ul>
-            {% endif %}
-        {% endblock messages %}
-    
-        <!-- Content -->
-        <div id="content" class="{% block coltype %}colM{% endblock %}">
-            {% block pretitle %}{% endblock %}
-            {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
-            {% block content %}
-            {% block object-tools %}{% endblock %}
-            {{ content }}
-            {% endblock %}
-            {% block sidebar %}{% endblock %}
-            <br class="clear" />
-        </div>
-        <!-- END Content -->
-    </div>
+	<div class="inner">
+	
+		<!-- Content -->
+		<div id="content" class="{% block coltype %}colM{% endblock %}">
+			{% if not is_popup %}
+				{% block breadcrumbs %}
+					<div class="breadcrumbs">
+						<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
+						{% if title %} &rsaquo; {{ title }}{% endif %}
+					</div>
+				{% endblock %}
+			{% endif %}
+			{% block messages %}
+				{% if messages %}
+					<ul class="messagelist">
+						{% for message in messages %}
+							<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message|capfirst }}</li>
+						{% endfor %}
+					</ul>
+				{% endif %}
+			{% endblock messages %}
+		
+			
+			{% block pretitle %}{% endblock %}
+			{% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
+			{% block content %}
+			{% block object-tools %}{% endblock %}
+			{{ content }}
+			{% endblock %}
+			{% block sidebar %}{% endblock %}
+			<br class="clear" />
+		</div>
+		<!-- END Content -->
+	</div>
 </div>
 
 {% if has_permission and not is_popup %}
-    {% block left_sidebar %}{% include "admin/includes/left_sidebar.html" %}{% endblock %}
+	{% block left_sidebar %}{% include "admin/includes/left_sidebar.html" %}{% endblock %}
 {% endif %}
 
 
-    {% block footer %}<div id="footer"></div>{% endblock %}
+	{% block footer %}<div id="footer"></div>{% endblock %}
 </div>
 <!-- END Container -->
 
